--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,11 +1,11 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "BC Sans";
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: $accent-light;
+  background-color: $primary-dark;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: $secondary-dark;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: $secondary-light;
 }
 
 body {
@@ -42,12 +42,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: $secondary;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: $secondary-light;
 }
 button:focus,
 button:focus-visible {
@@ -59,7 +59,7 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 90em;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
