--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,7 @@ a {
   color: $secondary-dark;
   text-decoration: inherit;
 }
+
 a:hover {
   color: $secondary-light;
 }
@@ -46,22 +47,21 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: $secondary-light;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-  padding: 2em;
-}
-
 #app {
-  max-width: 90em;
+  max-width: 60rem;
   margin: 0 auto;
   padding: 2rem;
+  padding-bottom: 0rem;
   text-align: center;
 }
 
@@ -70,9 +70,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
